--- a/EIS.html
+++ b/EIS.html
@@ -380,7 +380,8 @@
                   <li class="treeview " data-level="1"><a style="padding-left:20px" class="nav-link"><i class="fa fa-folder-o"></i><span class="title menu-text">권한 관리</span><span class="pull-right-container">
                     <i class="fa fa-angle-left pull-right"></i></span></a>
                     <ul class="treeview-menu" style="display: none;">
-                      <li class="treeview " data-level="2"><a style="padding-left:40px" class="nav-link" onclick="addTabs({id:'SYSGRP02_01',title: '권한그룹설정',close: true,url: '/RoleGroup/Index',urlType: 'relative'});">
+                      <li class="treeview " data-level="2">
+                        <a style="padding-left:40px" class="nav-link" onclick="addTabs({id:'SYSGRP02_01',title: '권한그룹설정',close: true,url: '/RoleGroup/Index',urlType: 'relative'});">
                         <span class="title menu-text">권한그룹설정</span><span></span></a></li>
                       <li class="treeview " data-level="2"><a style="padding-left:40px" class="nav-link" onclick="addTabs({id:'SYSGRP02_02',title: '권한그룹별 메뉴설정',close: true,url: '/RoleGroupMenu/Index',urlType: 'relative'});">
                         <span class="title menu-text">권한그룹별 메뉴설정</span><span></span></a></li>
