--- a/Home/home.html
+++ b/Home/home.html
@@ -16,6 +16,7 @@
   <link href="../Content/dx.common.css" rel="stylesheet">
   <link href="../Content/dx.light.compact.css" rel="stylesheet">
 
+  <link href="../Content/dalim.css" rel="stylesheet">
 
   <script src="../Scripts/jquery-3.5.1.js"></script>
   <script src="../Content/AdminLTE2/plugins/jQuery/jquery-2.2.3.min.js"></script>
@@ -187,9 +188,9 @@
                             DevExpress.aspnet.setTemplateEngine();
                           </script>
                           <div id="dataBox"
-                            class="dx-show-invalid-badge dx-datebox dx-textbox dx-texteditor dx-show-clear-button dx-dropdowneditor-button-visible dx-editor-outlined dx-texteditor-empty dx-widget dx-visibility-change-handler dx-auto-width dx-dropdowneditor dx-datebox-date dx-datebox-calendar"
-style="background:red;height:30px;"
-                            >
+                            class="dx-show-invalid-badge dx-datebox dx-textbox dx-texteditor
+                            dx-show-clear-button dx-dropdowneditor-button-visible dx-editor-outlined dx-texteditor-empty dx-widget dx-visibility-change-handler dx-auto-width dx-dropdowneditor
+                            dx-datebox-date dx-datebox-calendar" style="height:26px;" >
                             <div class="dx-dropdowneditor-input-wrapper">
                               <input type="hidden" value="">
                               <div class="dx-texteditor-container">
