--- a/Home/01.html
+++ b/Home/01.html
@@ -345,8 +345,8 @@
       }
     </script>
 
-
-    <div style="background-color: #ecf0f5;">
+    <!-- 배경색상 -->
+    <div class="bg_background">
 
       <!-- Page Header -->
 
