--- a/Home/home.html
+++ b/Home/home.html
@@ -160,8 +160,8 @@
   <div style="width: 100%;">
 
 
-
-    <div style="background-color: #ecf0f5;">
+<!-- 배경색상 -->
+    <div class="bg_background">
 
       <section class="content">
 
