--- a/EIS.html
+++ b/EIS.html
@@ -348,7 +348,7 @@
       </header>
 
       <!-- Left side column. contains the logo and sidebar -->
-      <aside class="main-sidebar" style="margin-top:50px; border-top:1px solid #ddd;">
+      <aside class="main-sidebar" style="padding-top:0;margin-top:50px; border-top:1px solid #ddd;">
 
         <!-- sidebar: style can be found in sidebar.less -->
         <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 887px;">
@@ -432,7 +432,7 @@
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper" id="content-wrapper" style="min-height: 421px;">
         <!--bootstrap tab스타일 다중 tab 페이지-->
-        <div class="content-tabs" style="background":green;>
+        <div class="content-tabs">
           <button class="roll-nav roll-left tabLeft" onclick="scrollTabLeft()">
             <i class="fa fa-backward"></i>
           </button>
