--- a/Home/01.html
+++ b/Home/01.html
@@ -361,7 +361,7 @@
       <section class="content-header">
 
         <h1 style="vertical-align: bottom;">
-          <small style="vertical-align: bottom; ">
+          <small style="vertical-align: bottom; font-size:12px; ">
             <i class="glyphicon glyphicon-edit"></i> 시스템관리 &gt; 기준정보 &gt; 사용자관리
           </small>
         </h1>
