--- a/Home/01.html
+++ b/Home/01.html
@@ -359,9 +359,8 @@
       </script>
 
       <section class="content-header">
-
-        <h1 style="vertical-align: bottom;">
-          <small style="vertical-align: bottom; font-size:12px; ">
+        <h1>
+          <small>
             <i class="glyphicon glyphicon-edit"></i> 시스템관리 &gt; 기준정보 &gt; 사용자관리
           </small>
         </h1>
