--- a/EIS.html
+++ b/EIS.html
@@ -466,7 +466,7 @@
             <i class="fa fa-arrows-alt"></i>
           </button>
         </div>
-        <div id="iframeDiv" class="content-iframe " style="background-color: rgb(255, 255, 255); height: 737px;">
+        <div id="iframeDiv" class="content-iframe " style="background-color: #f1f1f1; height: 737px;">
           <div class="tab-content " id="tab-content" style="">
 
             <!-- <div role="tabpanel" class="tab-pane active" data-pageid="Dashboard">
