--- a/EIS.html
+++ b/EIS.html
@@ -467,17 +467,17 @@
           </button>
         </div>
         <div id="iframeDiv" class="content-iframe " style="background-color: #f1f1f1; height: 737px;">
-          <div class="tab-content " id="tab-content" style="">
-
-            <!-- <div role="tabpanel" class="tab-pane active" data-pageid="Dashboard">
-              <iframe src="./Home/Home.html" frameborder="no" id="iframe_Dashboard" class="tab_iframe" data-pageid="Dashboard" style="width: 100%; height: 794px;">
-              </iframe>
-            </div> -->
+          <div class="tab-content " id="tab-content">
 
             <div role="tabpanel" class="tab-pane active" data-pageid="Dashboard">
-              <iframe src="./Home/01.html" frameborder="no" id="iframe_Dashboard" class="tab_iframe" data-pageid="Dashboard" style="width: 100%; height: 794px;">
+              <iframe src="./Home/Home.html" frameborder="no" id="iframe_Dashboard" class="tab_iframe" data-pageid="Dashboard" style="width: 100%; height: 794px;">
               </iframe>
             </div>
+
+            <!-- <div role="tabpanel" class="tab-pane active" data-pageid="Dashboard">
+              <iframe src="./Home/01.html" frameborder="no" id="iframe_Dashboard" class="tab_iframe" data-pageid="Dashboard" style="width: 100%; height: 794px;">
+              </iframe>
+            </div> -->
 
             <!--
             <div role="tabpanel" class="tab-pane" data-pageid="PMSBI00100">
